Fixed: cleanup scss properties

--- a/src/assets/scss/_palette.scss
+++ b/src/assets/scss/_palette.scss
@@ -8,4 +8,7 @@ $primary: $color2;
 $secondary: $color4;
 $tertiary: $color5;
 $dark: $color3;
-$light: $color1
+$light: $color1;
+
+$theme-font: $light;
+$theme: $dark;
