--- a/src/assets/scss/master.scss
+++ b/src/assets/scss/master.scss
@@ -5,3 +5,13 @@
 // This has to be last!
 @import "~bulma/bulma.sass";
 @import "~bulma-prefers-dark/bulma-prefers-dark.sass";
+
+// Patches to make bulma work
+
+// Hide the input box of vue-tags-input
+.vue-tags-input .ti-input {
+    border: 0px !important;
+    width: 100%;
+    background: transparent;
+    padding: 0;
+}
